[package]
name = "cloudflare-ping"
version = "0.1.0"
authors = ["Tiberio Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.3.12"
etherparse = "0.9.0"
internet-checksum = "0.2.0"
structopt = "0.3"
termcolor = "1.1"
ctrlc = "3.1.4"
